# stift

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
crates/app/: Cargo.toml
crates/app/src/: app.rs  main.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
crates/storage/: Cargo.toml
