[workspace]
members = [
    "crates/app",
    "crates/core",
    "crates/compositor",
    "crates/renderer",
    "crates/storage",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samujon/stift"

[workspace.dependencies]
stift-core        = { path = "crates/core" }
stift-compositor  = { path = "crates/compositor" }
stift-renderer = { path = "crates/renderer" }
stift-storage  = { path = "crates/storage" }
