[package]
name = "stift-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "stift"
path = "src/main.rs"

[dependencies]
stift-core.workspace = true
stift-compositor.workspace = true
stift-renderer.workspace = true
stift-storage.workspace = true
egui = "0.34.3"
egui_dock = "0.19"
arboard = "3.6.1"
eframe = "0.34.3"
env_logger = "0.11.10"
log = "0.4.32"
pollster = "0.4.0"
